--- a/MvcNoAuthentication/packages.config
+++ b/MvcNoAuthentication/packages.config
@@ -22,10 +22,11 @@
   <package id="Microsoft.Owin.Security.OpenIdConnect" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.5" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.0" targetFramework="net45" />
+  <package id="Thinktecture.IdentityModel.Client" version="4.0.1" targetFramework="net45" />
   <package id="Thinktecture.IdentityModel.Core" version="1.2.0" targetFramework="net45" />
   <package id="Thinktecture.IdentityModel.Owin.ResourceAuthorization" version="1.0.1" targetFramework="net45" />
   <package id="Thinktecture.IdentityModel.Owin.ResourceAuthorization.Mvc" version="2.0.0" targetFramework="net45" />
